--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "apollo-link-http": "^1.3.0",
     "graphql-tools": "^2.11.0",
     "graphql-yoga": "^0.2.1",
-    "isomorphic-fetch": "^2.2.1"
+    "node-fetch": "^1.7.3"
   }
 }
